crates/plotnik-lib/tests/02-parser/recovery_validation/single_colon_type_annotation_no_space.txt
(identifier) @name:Type
==== diagnostics ====
error: type annotations use `::`, not `:`
 --> query.ptk:1:19
  |
1 | (identifier) @name:Type
  |                   ^
  |
help: use `::`
  |
1 | (identifier) @name::Type
  |                    +
